- Network current traffic info in the bottom line
- Refactor CPU variants into separates additional screens: Summary, CPU and CPU Freq.
- New Fan Speed Screen
- After change screen cycle the info bar content is set to the screen default one.
- Net Screen scaling is now controlled with the L4 key
- Force start temperature sensor id with the option -t id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/...)
- Force start fan speed sensor id with the option -f id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/...)
- Force to show temperature [id] in place of the maximal one on the Summary Screen with the option ie -gt 1
                    (the id should point to sysfs path /sys/class/hwmon/hwmon../device/temp[id]_input)
- On the Fan / Temp Screen  Current sensor is controlled with the L4 key (on systems with more then one sensor only).
- Every Screen has his own mode now (except Swap, Memory and Battery Screen)
SVN 515 (1.90):
- Fixed temperature / fan sensor lost
- Fixed screen cycle
SVN 516:
- Refactored temperature and fan speed - share the logic
SVN 517:
- Improve Bat Screen deactivation logic (now is it similar to SVN 515: Fixed temperature / fan sensor lost)
SVN 518 (1.91):
- Fix Summary, Freq and CPU Screens for some variants of the cpu cores number
- Improve Summary Screen
SVN 519
- Change default mode for Freq and Summary Screen
- Improve Summary Screen for cpus with more then 7 cores
SVN 520 (1.9.2)
- Disable monitoring CPUs frequencies with the option -df
- Improve Summary Screen without CPUs frequencies
SVN 530 (1.9.3)
- Activate the bottom info bar content rotate with the option -ir
- Change bottom info bar content to the component default one
- Activate variable CPUs count with the option -vc
- Improve Fan bottom info
SVN 531 (1.9.4)
- Fix time info
- Improve Fan / Temperature Screens leading labels position
- Improve Fan / Temperature Screens height calculation
- Improve Summary Screen multi bar (temperature and network)